--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,1 +1,3 @@
-<p> Componente topo @@@@@@@@@ </p>
+<nav class="navbar navbar-inverse bg-faded">
+  <h1 class="navbar-brand mb-0">Aprendendo Inglês</h1>
+</nav>
