--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -5,14 +5,16 @@
                 <app-progresso></app-progresso>
             </div>
             <div class="col-sm-6">
+                <div class="d-flex justify-content-end">
                 <app-tentativas></app-tentativas>
+                </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col">
-                <h6>Traduza a frase:</h6>
-                <p>How are you?</p>
+                <h6>Responda a questão:</h6>
+                <p>Métricas de software é ...</p>
 
                 <div class="form-group">
                     <textarea class="form-control" rows="3"></textarea>
