--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,3 +1,4 @@
 <nav class="navbar navbar-inverse bg-faded">
-  <h1 class="navbar-brand mb-0">Aprendendo Métricas de Software</h1>
+  <h1 class="navbar-brand mb-0">{{ titulo }}</h1>
+  
 </nav>
