--- a/src/app/progresso/progresso.component.html
+++ b/src/app/progresso/progresso.component.html
@@ -1,3 +1,5 @@
 <div class="progress">
-  <div class="progress-bar w-50"></div>
+  <div class="progress-bar" [style.width]="progresso+'%'" 
+title="Barra de Progresso"></div>
 </div>
+
