--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -20,6 +20,7 @@
                     <textarea class="form-control"
                      rows="3"
                      (input)="atualizaResposta($event)"
+                     [value]="resposta"
                      ></textarea>
                 </div>
             </div>
