destruindo component painel ao final da ultima rodada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-topo></app-topo>
-<app-painel (encerrarGame)="encerrarGame($event)"></app-painel>
+
+<div *ngIf="gamaEmAndamento">
+    <app-painel (encerrarGame)="encerrarGame($event)"></app-painel>
+</div>
+
+<div  class="jumbotron">
+    <h1>DERROTA !</h1>
+</div>
